Fixed overflow of the error message (#3)

--- a/theme/login/resources/css/login.css
+++ b/theme/login/resources/css/login.css
@@ -129,19 +129,22 @@ body {
   top: 50px;
 }
 .message-text {
-  width: 159px;
+  width: 322px;
+  height: 60px;
   opacity: 0.87;
   font-family: Muli;
   font-size: 14px;
   font-weight: normal;
   font-style: normal;
   font-stretch: normal;
-  line-height: 1.71;
+  line-height: 1.3;
   letter-spacing: -0.4px;
   text-align: left;
   color: red;
   border: 0px;
   position: relative;
-  top: 190px;
+  top: 210px;
   left: 64px;
+  display: inline-flex;
+  align-items: center;
 }
